--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.Pokedexer" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">#7B1FA2</item>
+        <item name="android:colorBackground">@color/md_theme_light_background</item>
     </style>
 </resources>
