--- a/app/src/main/res/drawable/ic_filter.xml
+++ b/app/src/main/res/drawable/ic_filter.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M10,18h4v-2h-4v2zM3,6v2h18L21,6L3,6zM6,13h12v-2L6,11v2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:pathData="M430,720q-12.75,0 -21.37,-8.68 -8.63,-8.67 -8.63,-21.5 0,-12.82 8.63,-21.32 8.62,-8.5 21.37,-8.5h100q12.75,0 21.38,8.68 8.62,8.67 8.62,21.5 0,12.82 -8.62,21.32 -8.63,8.5 -21.38,8.5L430,720ZM270,510q-12.75,0 -21.37,-8.68 -8.63,-8.67 -8.63,-21.5 0,-12.82 8.63,-21.32 8.62,-8.5 21.37,-8.5h420q12.75,0 21.38,8.68 8.62,8.67 8.62,21.5 0,12.82 -8.62,21.32 -8.63,8.5 -21.38,8.5L270,510ZM150,300q-12.75,0 -21.37,-8.68 -8.63,-8.67 -8.63,-21.5 0,-12.82 8.63,-21.32 8.62,-8.5 21.37,-8.5h660q12.75,0 21.38,8.68 8.62,8.67 8.62,21.5 0,12.82 -8.62,21.32 -8.63,8.5 -21.38,8.5L150,300Z"
+      android:fillColor="#000000"/>
 </vector>
